<resources>
    <string name="app_name">Mis Finanzas</string>
    <string name="title_login">Iniciar sesión</string>
    <string name="title_balance">Saldos</string>
    <string name="title_potential_movements">Potenciales movimientos desde SMS</string>
    <string name="title_movements">Movimientos</string>
    <string name="title_masters">Maestros</string>
    <string name="title_movements_details">Detalle del movimiento</string>
    <string name="title_movements_details_new">Ingresar movimiento</string>
    <string name="title_master_details">Detalle de %1$s</string>
    <string name="title_master_details_new">Ingresar %1$s</string>
    <string name="title_filters">Filtros</string>
    <string name="title_sync">Sincronizar</string>
    <string name="loading">Cargando…</string>
    <string name="search">Buscar</string>

    <string name="dialog_percent">0.9</string>

    <string name="me">Yo</string>
    <string name="to_define">Por definir</string>
    <string name="close">Cerrar</string>
    <string name="add">Agregar</string>
    <string name="accept">Aceptar</string>
    <string name="txt_continue">Continuar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Volver</string>

    <!--MastersFragment-->
    <string name="masters_categories">Categorías</string>
    <string name="masters_places">Lugares</string>
    <string name="masters_people">Personas</string>
    <string name="masters_debts">Deudas</string>

    <!--Fragment Master Detail-->
    <string name="md_name">Nombre</string>
    <string name="md_active">¿Activo?</string>
    <string name="md_category">categoría</string>
    <string name="md_place">lugar</string>
    <string name="md_select_place_location">Selecciona la ubicación del lugar en el mapa</string>
    <string name="md_person">persona</string>
    <string name="md_debt">deudas</string>

    <!--ConfigFragment-->
    <string name="go_to_web"><u>Ir al sitio web</u></string>
    <string name="server_datetime_title">Fecha y hora del servidor</string>
    <string name="info_difference_time">La fecha y hora de sus registros puede variar con respecto a la diferencia horaria del servidor.</string>
    <string name="last_sync">Última sincronización</string>
    <string name="synchronizing">Sincronizando…</string>
    <string name="last_sync_movements">Movimientos: %1$s</string>
    <string name="last_sync_masters">Maestros: %1$s</string>
    <string name="never_synced">Nunca sincronizado.</string>
    <string name="server_datetime_value"> %1$s diferencia de %2$s</string>
    <string name="auto_sync_on_open">Sincronizar al iniciar la app</string>
    <string name="auto_sync_on_edit">Sincronizar al modificar movimientos</string>
    <string name="sync_movements">Sincronizar movimientos</string>
    <string name="sync_masters">Sincronizar maestros</string>
    <string name="sync_clean_discarded">Restaurar descartados</string>

    <!--CardView Login-->
    <string name="cardview_login_title">Ingreso Mis Finanzas</string>
    <string name="cardview_login_user">Usuario</string>
    <string name="cardview_login_password">Contraseña</string>
    <string name="cardview_login_enter">Ingresar</string>

    <!--CardView Balance -->
    <string name="cardview_balance_title">Actualmente tienes</string>
    <string name="cardview_balance_cash">Efectivo: </string>
    <string name="cardview_balance_card">Electrónico: </string>
    <string name="cardview_balance_total">Total: </string>

    <!--View Movement Detail-->
    <string name="view_md_select">Seleccione</string>
    <string name="view_md_enter">Ingrese</string>
    <string name="view_md_not_associated_male">No asociado</string>
    <string name="view_md_not_associated_female">No asociada</string>
    <string name="view_md_movement_type">Tipo de movimiento</string>
    <string name="view_md_value">Valor</string>
    <string name="view_md_description">Descripción</string>
    <string name="view_md_person">Persona</string>
    <string name="view_md_person_not_associated">Yo (seleccione para asociar)</string>
    <string name="view_md_place">Lugar</string>
    <string name="view_md_category">Categoría</string>
    <string name="view_md_mov_date">Fecha del movimiento</string>
    <string name="view_md_debt">Deuda</string>
    <string name="view_md_not_associated_select_male">No asociado (seleccione para asociar)</string>
    <string name="view_md_not_associated_select_female">No asociada (seleccione para asociar)</string>
    <string name="view_md_entry_date">Fecha de ingreso:</string>
    <string name="view_md_lastUpd_date">Fecha de actualización:</string>
    <string name="md_date">%1$s/%2$s/%3$s</string>
    <string name="md_info">%1$s - %2$s %3$s %4$s</string>

    <!--MovementTypeList-->
    <string name="mt_not_selected">Seleccione</string>
    <string name="mt_cash_income">Ingreso en efectivo</string>
    <string name="mt_cash_out">Egreso en efectivo</string>
    <string name="mt_card_income">Ingreso electrónico</string>
    <string name="mt_card_out">Egreso electrónico</string>
    <string name="mt_withdrawal">Retiro</string>
    <string name="mt_card_buy">Compra con TC</string>

    <!--Error messages-->
    <string name="error_not_network_no_sync">No hay conexión a internet. No se puede sincronizar.</string>
    <string name="error_not_network_no_sync_detail">No hay conexión a internet. Guardado para sincronizar cuando haya conexión.</string>
    <string name="error_not_network_no_login">No hay conexión a internet. No se puede iniciar sesión.</string>
    <string name="error_not_network_no_continue">No hay conexión a internet. No se puede continuar.</string>
    <string name="error_synchronizing">Ocurrió un error sincronizando los datos: %1$s</string>
    <string name="error_synchronizing_no_info">Ocurrió un error sincronizando los datos. Por favor intenta nuevamente.</string>
    <string name="error_saving_master_no_info">Ocurrió un error guardando el maestro. Por favor intenta nuevamente.</string>
    <string name="error_getting_movements">Ocurrió un error obteniendo los movimientos: %1$s</string>
    <string name="error_getting_masters">Ocurrió un error obteniendo los maestros: %1$s</string>
    <string name="error_getting_balance">Ocurrió un error obteniendo los saldos: %1$s</string>
    <string name="error_getting_categories">Ocurrió un error obteniendo las categorias: %1$s</string>
    <string name="error_getting_debts">Ocurrió un error obteniendo las deudas: %1$s</string>
    <string name="error_getting_places">Ocurrió un error obteniendo los lugares: %1$s</string>
    <string name="error_getting_people">Ocurrió un error obteniendo las personas: %1$s</string>
    <string name="error_getting_user">Ocurrió un error obteniendo el usuario: %1$s</string>
    <string name="error_getting_srv_dtm">Ocurrió un error obteniendo la fecha y hora del servidor: %1$s</string>
    <string name="error_getting_discarded_movs">Ocurrió un error obteniendo los movimientos descartados: %1$s</string>
    <string name="error_retrofit">Retrofit: %1$s</string>
    <string name="error_room">Room: %1$s</string>
    <string name="error_master_exists">No se puede guardar \'%1$s\' porque ya existe.</string>

    <!--Info messages-->
    <string name="info_enter_user_and_password">Por favor ingrese usuario y contraseña.</string>
    <string name="info_wrong_user_or_password">Usuario y/o contraseña incorrecta.</string>
    <string name="info_please_log_in">Por favor inicie sesión.</string>
    <string name="info_config_saved">Configuración guardada.</string>
    <string name="info_no_movements">No hay movimientos para mostrar.</string>
    <string name="info_no_data">No hay datos para mostrar.</string>
    <string name="info_no_balance">No hay saldos para mostrar.</string>
    <string name="info_data_synced">Datos sincronizados con éxito.</string>
    <string name="info_movements_synced">Movimientos sincronizados con éxito.</string>
    <string name="info_movements_discarded_restored">Los movimientos descartados fueron restaurados con éxito.</string>
    <string name="info_movement_synced_details">Movimiento sincronizado también con el servidor.</string>
    <string name="info_movement_saved">Movimiento guardado con éxito.</string>
    <string name="info_movement_deleted">Movimiento eliminado con éxito.</string>
    <string name="info_movement_discarded">Movimiento descartado.</string>
    <string name="info_movement_updated">Movimiento actualizado con éxito.</string>
    <string name="info_masters_synced">Maestros sincronizados con éxito.</string>
    <string name="info_master_saved">Maestro guardado con éxito.</string>
    <string name="info_master_updated">Maestro actualizado con éxito.</string>
    <string name="info_user_saved">Usuario guardado con éxito.</string>
    <string name="info_select_movement_type">Por favor seleccione el tipo de movimiento.</string>
    <string name="info_select_debt_by_cc_buy">Una compra con TC debe estar relacionada con una deuda. Por favor seleccione una deuda.</string>
    <string name="info_enter_value">Por favor ingrese el valor del movimiento.</string>
    <string name="info_enter_name">Por favor ingrese el nombre.</string>
    <string name="info_only_numbers">Solo se permiten valores numéricos.</string>
    <string name="info_select_category">Por favor seleccione la categoría.</string>
    <string name="info_select_date">Por favor seleccione la fecha del movimiento.</string>
    <string name="info_enter_valid_date">Por favor ingrese una fecha válida.</string>

    <!--Confirm Dialog-->
    <string name="cd_title_delete">Eliminar movimiento</string>
    <string name="cd_title_discard">Descartar movimiento</string>
    <string name="cd_desc_delete">¿Está seguro que desea eliminar el movimiento?</string>
    <string name="cd_desc_discard">¿Está seguro que desea descartar el movimiento?</string>
    <string name="cd_yes">Si</string>
    <string name="cd_no">No</string>
    <string name="title_activity_maps">Map</string>

    <!-- Permission Messages -->
    <plurals name="rationale_title">
        <item quantity="one">Este permiso es requerido</item>
        <item quantity="other">Estos permisos son requeridos</item>
    </plurals>
    <string name="read_permission_message">\u25CF Se necesita acceso a la memoria para poder seleccionar la foto.</string>
    <string name="write_permission_message">\u25CF Se necesita acceso a la memoria para poder guardar las fotos tomadas por la cámara.</string>
    <string name="camera_permission_message">\u25CF Se necesita acceso a la cámara para poder tomar la foto.</string>
    <string name="location_permission_message">\u25CF Se necesita acceso a la ubicación para poder mostrar el mapa.</string>
    <string name="sms_permission_message">\u25CF Se necesita acceso a los mensajes de texto para obtener potenciales movimientos desde su banco.</string>

</resources>
