<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/balanceFragment">

    <action
        android:id="@+id/action_to_movementDetailFragment"
        app:destination="@id/movementDetailFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
    <action
        android:id="@+id/action_to_filtersFragment"
        app:destination="@id/filtersFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    <action
        android:id="@+id/action_to_mastersListFragment"
        app:destination="@id/mastersListFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />

    <action
        android:id="@+id/action_to_masterDetailFragment"
        app:destination="@id/masterDetailFragment" />

    <fragment
        android:id="@+id/balanceFragment"
        android:name="com.android.misfinanzas.ui.logged.balance.BalanceFragment"
        android:label="@string/title_balance"
        tools:layout="@layout/fragment_balance" />

    <fragment
        android:id="@+id/movementsFragment"
        android:name="com.android.misfinanzas.ui.logged.movements.MovementsFragment"
        android:label="@string/title_movements"
        tools:layout="@layout/fragment_movements" />

    <fragment
        android:id="@+id/movementDetailFragment"
        android:name="com.android.misfinanzas.ui.logged.movements.movementDetail.MovementDetailFragment"
        android:label="@string/title_movements_details"
        tools:layout="@layout/fragment_movement_detail" />

    <fragment
        android:id="@+id/masterDetailFragment"
        android:name="com.android.misfinanzas.ui.logged.masters.mastersList.masterDetail.MasterDetailFragment"
        android:label="@string/title_master_details"
        tools:layout="@layout/fragment_master_detail" />

    <fragment
        android:id="@+id/filtersFragment"
        android:name="com.android.misfinanzas.ui.logged.movements.filters.FiltersFragment"
        android:label="@string/title_filters"
        tools:layout="@layout/fragment_filters" />

    <fragment
        android:id="@+id/mastersFragment"
        android:name="com.android.misfinanzas.ui.logged.masters.MastersFragment"
        android:label="@string/title_masters"
        tools:layout="@layout/fragment_masters" />

    <fragment
        android:id="@+id/mastersListFragment"
        android:name="com.android.misfinanzas.ui.logged.masters.mastersList.MastersListFragment"
        android:label="@string/title_masters"
        tools:layout="@layout/fragment_masters_list" />

    <fragment
        android:id="@+id/configFragment"
        android:name="com.android.misfinanzas.ui.logged.config.ConfigFragment"
        android:label="@string/title_sync"
        tools:layout="@layout/fragment_config" />

</navigation>
